panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__typedef__test_typedef_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_typedef_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_struct.c"
   (struct T~0
      (member x @0 `int`))
   (typedef Name `struct T~0 complete`)
   (function-definition external stack-size=24
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (value~3 `struct T~0 complete` @0)
            (braced
               (subobject +0 (42 `int` @0))))
         (return
            (member `int` @0 x +0
               (value~3 `struct T~0 complete` @0))))))

----- stderr -----
